- SCIPvarGetMinAggrCoef() and SCIPvarGetMaxAggrCoef() to get bounds on absolute aggregation coefficients for a loose variable;
  SCIPisVarAggrCoefAcceptable() to check whether bounds on aggregation coefficients would exceed thresholds when using a loose variable in another aggregation
- SCIPgetNRootIntFixings() to retrieve the number of integer fixings at the root node

### Changes in preprocessor macros

- removed `#define` of `strcasecmp` and `strncasecmp` (in case of Windows builds) in scip/def.h;
  use SCIPstr(n)casecmp() (scip/pub_misc.h) instead
- SCIPincludeConshdlrOrbitopePP(), SCIPcreateConsOrbitopePP(), SCIPcreateConsBasicOrbitopePP(), SCIPincludeConshdlrOrbitopeFull(), SCIPcreateConsOrbitopeFull(), SCIPcreateConsBasicOrbitopeFull()
- SCIP_VERSION_SUB and SCIP_SUBVERSION are deprecated
- removed SCIP_VARTYPE_IMPLINT_CHAR
- added SCIP_PROPTIMING_NONE propagator timing to never call
- added SCIP_HEURTIMING_NONE heuristic timing to never call
- removed use of NO_RAND_R

### Command line interface

- help <command> now allows to display information on specific command.
- allow to hide certain commands in the help list
- add the (hidden) command "exit" to exit SCIP.
- Add iis option to create an infeasible subsystem
- Add write/iis option to write out the infeasible subsystem to file
- Add display/iis option to write out the infeasible subsystem to console

### Interfaces to external software

- added an interface to the CONOPT NLP solver
- removed LP solver interface lpi_spx1 that used the old SoPlex interface; renamed lpi_spx2 to lpi_spx

### Changed parameters

- heuristics/scheduler/heurtimelimit removed to avoid indeterministic behavior of scheduler heuristic, uses main time limit instead
- removed parameters "constraints/orbitope/checkpporbitope", "constraints/orbitope/sepafullorbitope", "constraints/orbitope/forceconscopy", which became superfluous
- removed reading/gmsreader/signpower