@@ -200,3 +200,21 @@ void SCIPprintMemoryDiagnostic(
    SCIPmessagePrintInfo(scip->messagehdlr, "\nClean Memory Buffers:\n");
    BMSprintBufferMemory(SCIPcleanbuffer(scip));
 }
+
+/** run garbage collection on block memory
+ *
+ * For both settings and problems block memory, frees unused chunks in chunk blocks
+ * and frees chunk blocks that have no chunks by calling BMSgarbagecollectBlockMemory().
+ * Note that the former (freeing unused chunks) is also done automatically when a
+ * chunk block has many unused chunks.
+ */
+void SCIPcollectMemoryGarbage(
+   SCIP*                 scip                /**< SCIP data structure */
+   )
+{
+   assert(scip != NULL);
+   assert(scip->mem != NULL);
+
+   BMSgarbagecollectBlockMemory(scip->mem->setmem);
+   BMSgarbagecollectBlockMemory(scip->mem->probmem);
+}
